added some pictures

--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -77,8 +77,8 @@ A full list of all components of the K2 TIRF is shown below. The list is subdivi
 <tr class = "homemade">
 <td>1</td> <!--id-->
 <td id="fancyboxtitle_1">(modified) miCube block </td> <!--title-->
-<td><div class="discTitle">CNC milled - <a href="https://github.com/HohlbeinLab/HohlbeinLab.github.io/blob/master/miCube/STL%20files/1%20-%20Glass%20Plate%20Insert.STL">Technical drawing</a></div> Modified dimensions and threaded holes to mount the piezo positioner on. Magnet to keep door shut.</td> <!--description-->
-<td><img src="images/miCube_amolf.jpg" class="fancybox" id=1></td> <!--image-->
+<td><div class="discTitle">CNC milled - <a href="drawings/cube.pdf">Technical drawing</a></div> Modified dimensions and threaded holes to mount the piezo positioner on. Magnet to keep door shut.</td> <!--description-->
+<td><img src="images/miCube_amolf.png" class="fancybox" id=1></td> <!--image-->
 <td><a href="https://hohlbeinlab.github.io/miCube/index.html"> miCube</a></td> <!--price-->
 </tr>
 <tr>
@@ -98,8 +98,8 @@ A full list of all components of the K2 TIRF is shown below. The list is subdivi
 <tr class = "homemade">
 <td>4</td> <!--id-->
 <td id="fancyboxtitle_3">Thermal insulation spacer</td> <!--title-->
-<td><div class="discTitle">CNC-milled <a href="https://github.com/HohlbeinLab/HohlbeinLab.github.io/blob/master/miCube/STL%20files/1%20-%20Glass%20Plate%20Insert.STL">Technical drawing</a></div> POM spacer with M25 x 0.75 internal and external threads for thermal insulation of the heated objective </td> <!--description-->
-<td><img src="images/nikon60x.jpg" class="fancybox" id=3></td> <!--image-->
+<td><div class="discTitle">CNC-milled <a href="drawings/thermal_spacer.pdf">Technical drawing</a></div> POM spacer with M25 x 0.75 internal and external threads for thermal insulation of the heated objective </td> <!--description-->
+<td><img src="images/thermal_spacer.png" class="fancybox" id=3></td> <!--image-->
 <td></td> <!--price-->
 </tr>
 <tr class = "homemade">
@@ -125,23 +125,30 @@ A full list of all components of the K2 TIRF is shown below. The list is subdivi
 </tr>
 <tr>
 <td>7a</td> <!--id-->
-<td id="fancyboxtitle_7a">Dichroic mirror holder</td> <!--title-->
+<td id="fancyboxtitle_7a">Dichroic mirror cube </td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.de/thorproduct.cfm?partnumber=DFM1/M">DFM1/M</a></div>Magnetic hot-swappable dichroic mirror is placed inside.</td> <!--description-->
 <td><img src="https://www.thorlabs.de/images/large/TTN042093-lrg.jpg" class="fancybox" id=7a></td> <!--image-->
+<td></td> <!--price-->
+</tr>
+<tr class ="homemade">
+<td>7a</td> <!--id-->
+<td id="fancyboxtitle_7a">Dichroic mirror cube spacer </td> <!--title-->
+<td><div class="discTitle">Thorlabs - <a href="drawings/dichroic_distance.pdf">Technical drawing</a></div>Magnetic hot-swappable dichroic mirror is placed inside.</td> <!--description-->
+<td><img src="images/dichroic_distance.png" class="fancybox" id=7a></td> <!--image-->
 <td></td> <!--price-->
 </tr>
 <tr>
 <td>7b</td> <!--id-->
 <td id="fancyboxtitle_7b">Dichroic mirror</td> <!--title-->
 <td><div class="discTitle">Chroma - <a href="https://www.chroma.com/products/parts/zt405-488-561-640rpcv2">ZT405/488/561/640rpc-UF2</a></div></td> <!--description-->
-<td><img src="images/miCube_components/dichroic_square.jpg" class="fancybox" id=7b></td> <!--image-->
+<td><img src="images/dichroic_square.jpg" class="fancybox" id=7b></td> <!--image-->
 <td></td> <!--price-->
 </tr>
 <tr>
 <td>8</td> <!--id-->
 <td id="fancyboxtitle_8">TIRF filter</td> <!--title-->
 <td><div class="discTitle">Chroma - <a href="https://www.chroma.com/products/parts/zet405-488-561m-trf">ZET405/488/561m-TRF</a> or <a href="https://www.chroma.com/products/parts/zet405-488-561-640m-trfv2">ZET405/488/561/640m-TRF</a></div></td> <!--description-->
-<td><img src="images/miCube_components/chroma-filter.png" class="fancybox" id=8></td> <!--image-->
+<td><img src="images/chroma-filter.png" class="fancybox" id=8></td> <!--image-->
 <td>?</td> <!--price-->
 </tr>
 <tr>
