--- a/K2TIRF/index.html
+++ b/K2TIRF/index.html
@@ -53,7 +53,14 @@ The real text begins here.
 <section>
 <h1>The K2 TIRF microscope</h1>
 
-<p>Commercially available fluorescence microscopes that are compatible with single-molecule experiments are often very expensive and/or lack flexibility. In recent years, a number of open-source projects emerged within the (single-molecule) fluorescence microscopy community, facilitating the planning and setting up of a custom microscope. These projects can be combined with each other or with commercial solutions, depending on the experimental requirements, the infrastructure around the lab (workshops, instrument developers), the available budget and workforce.</p>
+<p>Commercially available fluorescence microscopes that are compatible with single-molecule experiments are often very expensive and lack flexibility. <br>
+In recent years, a number of open-source projects emerged within the (single-molecule) fluorescence microscopy community, facilitating the planning and setting up of a custom microscope. <br>
+These projects can be combined with each other or with commercial solutions, depending on the experimental requirements, the infrastructure around the lab (workshops, instrument developers), the available budget and workforce.<br>
+<br>
+In our multicolor single-molecule TIRF microscope 'K2' we opt for commercial solutions for parts which don't need the maximum flexibility, and are much cheaper or much faster obtained than a comparable custom-made solution. <br>
+Whenever available, we base our custom-made solutions on existing open-source projects to save time and costs in the instrument development process.<br>
+
+</p>
 <br>
 <figure id="K2 setup" style="display: inline-block;  float: center; width:60%;margin-left:10px;max-width:600px;">
 <img src="./images/K2_setup_boxedup.JPG"
@@ -61,7 +68,8 @@ The real text begins here.
 <figcaption><strong>Under the hood of the K2 TIRF microscope</strong></figcaption>
 </figure>
 <br>
-Our single-molecule TIRF microscope K2 is based on the <a href="https://hohlbeinlab.github.io/miCube/index.html">miCube</a> and includes several additions:
+Our single-molecule TIRF microscope K2 has no conventional microscope body, instead it is based on the <a href="https://hohlbeinlab.github.io/miCube/index.html">miCube project</a>. <br>
+This allows for a much smaller footprint and budget, while still providing the required mechanical stability. <br>
 <ul>
 <li>Custom emission image splitter to record images simultaneously at three different optical wavelengths </li>
 <li>Flip-in lens in the excitation path for photobleaching experiments (FRAP)</li>
