--- a/K2TIRF/index.html
+++ b/K2TIRF/index.html
@@ -38,8 +38,8 @@ experience.</p>
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-
   </head>
+   
   <body>
     <div class="wrapper">
       <header>
@@ -51,36 +51,38 @@ The real text begins here.
 ##############################################################
  -->
 <section>
-<h1>The K2 TIRF microscope</h1>
-
+<h1>Ganzinger Lab - K2 TIRF microscope</h1>
+<div style="max-width:85%;">
 <p>Commercially available fluorescence microscopes that are compatible with single-molecule experiments are often very expensive and lack flexibility. <br>
 In recent years, a number of open-source projects emerged within the (single-molecule) fluorescence microscopy community, facilitating the planning and setting up of a custom microscope. <br>
 These projects can be combined with each other or with commercial solutions, depending on the experimental requirements, the infrastructure around the lab (workshops, instrument developers), the available budget and workforce.<br>
 <br>
 In our multicolor single-molecule TIRF microscope 'K2' we opt for commercial solutions for parts which don't need the maximum flexibility, and are much cheaper or much faster obtained than a comparable custom-made solution. <br>
 Whenever available, we base our custom-made solutions on existing open-source projects to save time and costs in the instrument development process.<br>
-
+</div>
 </p>
 <br>
-<figure id="K2 setup" style="display: inline-block;  float: center; width:60%;margin-left:10px;max-width:600px;">
-<img src="./images/K2_setup_boxedup.JPG"
- alt="K2 setup">
-<figcaption><strong>Under the hood of the K2 TIRF microscope</strong></figcaption>
-</figure>
+<div class="container">
+	<img src="./images/K2_setup_left.jpg" width=41.4% /> &nbsp
+	<img class="middle-img" src="./images/K2_setup_right.jpg" width=40% />
+</div>
 <br>
-Our single-molecule TIRF microscope K2 has no conventional microscope body, instead it is based on the <a href="https://hohlbeinlab.github.io/miCube/index.html">miCube project</a>. <br>
+
+<div style="max-width:85%;">Our single-molecule TIRF microscope K2 has no conventional microscope body, instead it is based on the <a href="https://hohlbeinlab.github.io/miCube/index.html">miCube project</a>. <br>
 This allows for a much smaller footprint and budget, while still providing the required mechanical stability. <br>
-<ul>
-<li>Custom emission image splitter to record images simultaneously at three different optical wavelengths </li>
+For the laser excitation we chose a commercial solution for the hardware (<a href="https://hubner-photonics.com/products/lasers/laser-combiners/c-flex/">Cobolt C-Flex</a>), which provides reasonable flexbility in terms of adding and changing laser frequencies, and developed a custom-made laser trigger box. <br>
+In order to record images simultaneously at three different optical wavelengths, we included a self-built emission image splitter in the emission pathway and combined it with a 60x magnification objective (<a href="https://www.microscope.healthcare.nikon.com/en_EU/products/optics/cfi-apochromat-tirf-series">Nikon Apo TIRF 60x 1.49NA</a> 
+and a 2048-by-2048px sCMOS camera (<a href="https://www.photometrics.com/applications/customer-stories/tirf-microscopy-bsi-ganzinger">Teledyne Photometrics Prime BSI</a>) to retain a big field of view. 
+<br>Further additions to the setup include:<ul>
 <li>Flip-in lens in the excitation path for photobleaching experiments (FRAP)</li>
 <li>qgFocus: our implementation of the <a href="http://big.umassmed.edu/wiki/index.php/PgFocus">pgFocus</a> focus stabilization system</li>
 <li>Beamshaping device (<a href="http://www.pishaper.com/">piShaper</a>) for flat-top illumination over a big field of view (see <a href="https://www.nature.com/articles/s41467-019-09064-6"> Stehr, Stein et al.</a>)</li>
 <li>Sample stage: Three-axis piezo stick-slip positioner (<a href="https://www.smaract.com/linear-stages/type/SLS-52x">Smaract SLS5252</a>) wih nanometer resolution and 30mm travel range</li>
 <li>Objective-heater and plexiglass housing for live-cell imaging</li>
 </ul>
-</p>
-<p></p>For a detailed description of the complete microscope, go to the <a href="./component_table.html" target="_self">component list</a>.</p>
 
+<p></p>For a detailed description of the complete microscope, go to the <a href="./component_table.html" target="_self">component list</a>.</p>
+</div>
 </section>
 <br><footer><script src="footer.js"></script></footer>
  <!--[if !IE]><script>fixScale(document);</script><![endif]-->
