--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -190,6 +190,14 @@ Schematic adapted from <a href="https://pubs.acs.org/doi/abs/10.1021/acs.nanolet
 </tr>
 <tr>
 <td>1</td> <!--id-->
+<td id="fancyboxtitle_21">Breadboard</td> <!--title-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=MB4560/M">MB4560/M</a> breadboard on 
+<a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=P30/M">P30/M</a> posts</a></div>Excitation path optics are assembled on the breadboard to bring the beam height up without a periscope. A beam height of xxmm above the breadboard will match the main cube opening hole xx mm above the main optical breadboard/optical table.</td> <!--description-->
+<td><img src="images/fibermount.jpg" class="fancybox" id=21></td> <!--image-->
+<td></td> <!--price-->
+</tr>
+<tr>
+<td>1</td> <!--id-->
 <td id="fancyboxtitle_21">Fiber mount</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=SM1FCA">SM1FCA</a> fiber mount in <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CP33/M">CP33/M</a> cage plate</a></div></td> <!--description-->
 <td><img src="images/fibermount.jpg" class="fancybox" id=21></td> <!--image-->
