--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -128,8 +128,8 @@ Schematic adapted from <a href="https://pubs.acs.org/doi/abs/10.1021/acs.nanolet
 <tr class="homemade">
 <td>8</td> <!--id-->
 <td id="fancyboxtitle_8">Plexiglass housing</td> <!--title-->
-<td><div class="discTitle">Custom made - <a href="drawings/housing.pdf">Technical drawing</a></div> Protects sample and objective from dust and airflow and improves temperature stability. Including a LED ring for brightfield imaging</td> <!--description-->
-<td><img src="images/samplehlder.png" class="fancybox" id=8></td></td> <!--image-->
+<td><div class="discTitle">Custom made - Technical drawings: <a href="drawings/housing_assembly.pdf">Assembly</a>, <a href="drawings/housing_basis.pdf">basis</a>, <a href="drawings/housing_lid.pdf">lid</a> and <a href="drawings/housing_spacer.pdf">spacer</a></div> Protects sample and objective from dust and airflow and improves temperature stability. Including a LED ring for brightfield imaging</td> <!--description-->
+<td><img src="images/housing.png" class="fancybox" id=8></td></td> <!--image-->
 <td></td> <!--price-->
 </tr>
 <tr>
@@ -143,7 +143,7 @@ Schematic adapted from <a href="https://pubs.acs.org/doi/abs/10.1021/acs.nanolet
 <td>10</td> <!--id-->
 <td id="fancyboxtitle_10">Dichroic mirror cube spacer </td> <!--title-->
 <td><div class="discTitle">Custom made - <a href="drawings/dichroic_distance.pdf">Technical drawing</a></div></td> <!--description-->
-<td><img src="images/dichroic_distance.png" class="fancybox" id=10></td> <!--image-->
+<td><img src="images/dichroic_distance_loc.png" class="fancybox" id=10></td> <!--image-->
 <td></td> <!--price-->
 </tr>
 <tr>
@@ -193,7 +193,7 @@ Schematic adapted from <a href="https://pubs.acs.org/doi/abs/10.1021/acs.nanolet
 <td id="fancyboxtitle_21">Breadboard</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=MB4560/M">MB4560/M</a> breadboard on 
 <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=P30/M">P30/M</a> posts</a></div>Excitation path optics are assembled on the breadboard to bring the beam height up without a periscope. A beam height of xxmm above the breadboard will match the main cube opening hole xx mm above the main optical breadboard/optical table.</td> <!--description-->
-<td><img src="images/fibermount.jpg" class="fancybox" id=21></td> <!--image-->
+<td><img src="images/breadboard.jpg" class="fancybox" id=21></td> <!--image-->
 <td></td> <!--price-->
 </tr>
 <tr>
@@ -253,8 +253,8 @@ Schematic adapted from <a href="https://pubs.acs.org/doi/abs/10.1021/acs.nanolet
 </tr>
 <td class="homemade">9</td> <!--id-->
 <td id="fancyboxtitle_29">Cage assembly adapter plate</td> <!--title-->
-<td><div class="discTitle">CNC-milled - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KCB1E/M">Technical drawing</a></div>Cage assembly is mounted onto the plate with with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CP02B"> CP02B mounting brackets</a>  and raised to 64.7mm beam height.</td> <!--description-->
-<td><img src="images/adapterplate.png" class="fancybox" id=29></td> <!--image-->
+<td><div class="discTitle">CNC-milled - <a href="drawings/kmts25e_adapter.pdf">Technical drawing</a></div>Cage assembly is mounted onto the plate with with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CP02B"> CP02B mounting brackets</a>  and raised to 64.7mm beam height.</td> <!--description-->
+<td><img src="images/kmts25e_adapter.png" class="fancybox" id=29></td> <!--image-->
 <td></td> <!--price-->
 </tr>
 <tr>
@@ -309,7 +309,7 @@ and three 1" AC254-300-A lenses (two <a href="https://www.thorlabs.com/thorprodu
 <td>5</td> <!--id-->
 <td id="fancyboxtitle_44">Image splitter dichroic mirrors</td> <!--title-->
 <td><div class="discTitle">Chroma - <a href="https://www.chroma.com/products/parts/zt561rdc">ZT561rdc</a> and <a href="https://www.chroma.com/products/parts/zt640rdc">ZT640rdc</a></div></td> <!--description-->
-<td><img src="images/.png" class="fancybox" id=44></td> <!--image-->
+<td><img src="images/emission_splitter.png" class="fancybox" id=44></td> <!--image-->
 <td></td> <!--price-->
 </tr>
 <tr>
@@ -325,13 +325,26 @@ and <a href="https://www.semrock.com/filterdetails.aspx?id=ff01-680/42-25">Semro
 <td id="fancyboxtitle_46">Camera</td> <!--title-->
 <td><div class="discTitle"><a href="https://www.photometrics.com/products/prime-family/primebsi">Teledyne Photometrics prime BSI sCMOS camera</a></div>2048-by-2048 pixels, 
 with <a href="https://www.aquatuning.nl/waterkoeling/sets-en-systemen/externe-sets/22164/alphacool-eiswand-360-solo-black?c=4788">Alphacool Eiswand</a> watercooling.</td> <!--description-->
-<td><img src="images/.png" class="fancybox" id=46></td> <!--image-->
+<td><img src="images/primebsi.png" class="fancybox" id=46></td> <!--image-->
 <td><a href="https://www.photometrics.com/applications/customer-stories/tirf-microscopy-bsi-ganzinger"><Prime BSI customer story</a></td> <!--price-->
 </tr>
 </table>
 
 <h2>qgFocus path (IV)</h2>
-The <i>quite good focus</i> is our implementation of the pgFocus.
+<div style="max-width:80%;">
+The <i>quite good focus</i> is our implementation of the <a href="http://big.umassmed.edu/index.php/9-images/28-pgfocus">pgFocus</a>.<br>
+Alignment tips:<br>
+<ul>
+	<li>Start with an aligned excitation laser path, open the zero aperture iris fully, remove the neutral density filter, the infrared TIRF lens and the objective</li>
+	<li>Move the excitation laser into epifluorescence mode and make sure the infrared beam's spot overlaps with the excitation laser's spot on the focus lock coupling dichro</li>
+	<li>Co-align the infrared laser to the excitation laser using the coupling dichro so that all laser beams exit the objective port centered and perpendicular to the optical table</li>
+	<li>Insert the objective and the infrared TIRF lens, and mount a coverglass on immersion oil on the objective. Make sure the infrared laser beam is coming out of the objective collimated.</li>
+	<li>Move the infrared laser into total internal reflection (TIR) by translating the stage. First try TIR  glass-air interface, glass-water will be more difficult due to the smaller working range of TIR angles. </li>
+	<li>A quick test whether the alignment is roughly correct can be performed by placing the IR viewing disk after the dovetail stage  such that the incoming beam passes through the hole. 
+	The back-reflected beam will then be visible on the disk and it's x-y movement resulting from moving the sample in z can be followed</li>
+</ul>
+</div>
+
 <table class="component_list">
 <tr>
 <th>id</th>
@@ -344,9 +357,9 @@ The <i>quite good focus</i> is our implementation of the pgFocus.
 <tr class="homemade">
 <td>1</td> <!--id-->
 <td id="fancyboxtitle_50">qgFocus device</td> <!--title-->
-<td><div class="discTitle">Custom made focus lock with a <a href="https://www.parallax.com/product/28317">TSL1401</a> linescan sensor</div> 128-pixel resolution with 63.5um (h) x 55.5um (w) pixels in post-mountable housing with USB output port</td> <!--description-->
+<td><div class="discTitle">Custom made focus lock with a <a href="https://www.parallax.com/product/28317">TSL1401</a> linescan sensor on a Thorlabs <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KM100B/M">KM100B/M</a> mount.</div> 128-pixel resolution with 63.5um (h) x 55.5um (w) pixels in post-mountable housing with USB output port</td> <!--description-->
 <td><img src="images/qgfocus.png" class="fancybox" id=50></td> <!--image-->
-<td><a href="http://big.umassmed.edu/index.php/9-images/28-pgfocus"> pgFocus</a></td> <!--price-->
+<td></td> <!--price-->
 </tr>
 <tr>
 <td>2</td> <!--id-->
@@ -411,7 +424,7 @@ The <i>quite good focus</i> is our implementation of the pgFocus.
 <tr>
 <td>9</td> <!--id-->
 <td id="fancyboxtitle_59">IR viewing disk</td> <!--title-->
-<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.de/thorproduct.cfm?partnumber=VRC2D1">VRC2D1</a> mounted in cage plate or small lens tube</div> Makes the alignment process much easier</td> <!--description-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.de/thorproduct.cfm?partnumber=VRC2D1">VRC2D1</a> mounted in cage plate or small lens tube</div> Indispensable for the alignment procedure</td> <!--description-->
 <td><img src="images/irdisk.jpg" class="fancybox" id=59></td> <!--image-->
 <td></td> <!--price-->
 </tr>
@@ -426,9 +439,33 @@ The <i>quite good focus</i> is our implementation of the pgFocus.
 <th>Image</th>
 <th>Ref.</th>
 </tr>
+<td>1</td> <!--id-->
+<td id="fancyboxtitle_71">Laser triggering</td> <!--title-->
+<td><div class="discTitle">Custom made laser trigger box </div>Documentation to follow</td> <!--description-->
+<td><img src="images/triggerbox.png" class="fancybox" id=71></td> <!--image-->
+<td></td> <!--price-->
+</tr>
+<td>2</td> <!--id-->
+<td id="fancyboxtitle_71">Laser box</td> <!--title-->
+<td><div class="discTitle">Hübner Photonics - <a href="https://hubner-photonics.com/products/lasers/laser-combiners/c-flex/">C-FLEX with AOM for the 561nm DPSSL laser</a></div>405nm (140mW), 488nm (200mW), 561nm (220mW) and 638nm (195mW)</td> <!--description-->
+<td><img src="images/cflex.png" class="fancybox" id=71></td> <!--image-->
+<td></td> <!--price-->
+</tr>
+<td>3</td> <!--id-->
+<td id="fancyboxtitle_72">Fixed frequency source</td> <!--title-->
+<td><div class="discTitle">AA Opto Electronic - <a href="http://www.aaoptoelectronic.com/our-products/rf-drivers-for-modulators-fixed-frequency-shifters/"> MODA110-B251k-304560</a> 
+</div>RF frequency driver for the acousto optical modulator (AOM) controlling the 561nm DPSSL laser </td> <!--description-->
+<td><img src="images/aaoptoelectronics.png" class="fancybox" id=72></td> <!--image-->
+<td></td> <!--price-->
+</tr>
+<td>4</td> <!--id-->
+<td id="fancyboxtitle_73">Single mode fiber</td> <!--title-->
+<td><div class="discTitle">Qioptiq - <a href="https://www.excelitas.com/product/kineflex-fiber-delivery-system">kineFLEX-HPV-P-3-S-405..640-0.7-0.7-P0</a> 
+</div>Single mode polarization maintaining fiber and fiber coupler </td> <!--description-->
+<td><img src="images/fiber.png" class="fancybox" id=73></td> <!--image-->
+<td></td> <!--price-->
+</tr>
 </table>
-
-
 <h2>Accessories</h2>
 <table class="component_list">
 <tr>
