added notes to components

--- a/K2TIRF/index.html
+++ b/K2TIRF/index.html
@@ -63,12 +63,12 @@ Whenever available, we base our custom-made solutions on existing open-source pr
 </p>
 <br>
 <div class="container">
-	<img src="./images/K2_setup_left.jpg" width=41.4% /> &nbsp
-	<img class="middle-img" src="./images/K2_setup_right.jpg" width=40% />
+	<a href="images/K2_setup_left.png"><img src="./images/K2_setup_left.png" width=41.4% /></a> &nbsp
+	<a href="images/K2_setup_right.jpg"><img class="middle-img" src="./images/K2_setup_right.jpg" width=40% /></a>
 </div>
 <br>
 
-<div style="max-width:85%;">Our single-molecule TIRF microscope K2 has no conventional microscope body, instead it is based on the <a href="https://hohlbeinlab.github.io/miCube/index.html">miCube project</a>. <br>
+<div style="max-width:85%;">Our single-molecule TIRF microscope K2 has no conventional microscope body, instead it is based on the <a href="https://hohlbeinlab.github.io/miCube/index.html">miCube project</a>. 
 This allows for a much smaller footprint and budget, while still providing the required mechanical stability. <br>
 For the laser excitation we chose a commercial solution for the hardware (<a href="https://hubner-photonics.com/products/lasers/laser-combiners/c-flex/">Cobolt C-Flex</a>), which provides reasonable flexbility in terms of adding and changing laser frequencies, and developed a custom-made laser trigger box. <br>
 In order to record images simultaneously at three different optical wavelengths, we included a self-built emission image splitter in the emission pathway and combined it with a 60x magnification objective (<a href="https://www.microscope.healthcare.nikon.com/en_EU/products/optics/cfi-apochromat-tirf-series">Nikon Apo TIRF 60x 1.49NA</a> 
