updated optical path

--- a/K2TIRF/index.html
+++ b/K2TIRF/index.html
@@ -63,7 +63,7 @@ Whenever available, we base our custom-made solutions on existing open-source pr
 </p>
 <br>
 <div class="container">
-	<a href="images/K2_setup_left.png"><img src="./images/K2_setup_left.png" width=41.4% /></a> &nbsp
+	<a href="images/K2_setup_left.png"><img src="./images/K2_setup_left.jpg" width=41.4% /></a> &nbsp
 	<a href="images/K2_setup_right.jpg"><img class="middle-img" src="./images/K2_setup_right.jpg" width=40% /></a>
 </div>
 <br>
