added about page

--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -83,7 +83,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td id="fancyboxtitle_1">(modified) miCube block </td> <!--title-->
 <td><div class="discTitle">CNC milled - <a href="drawings/cube.pdf">Technical drawing</a></div> Modified dimensions and threaded holes to mount the piezo positioner on. Handy knob and magnets to keep door shut without screws.</td> <!--description-->
 <td><img src="images/cube_amolf.png" class="fancybox" id=1></td> <!--image-->
-<td>Possible improvement: decreasing the distance from excitation beam port to dichroic filter cube, such that also TIRF lenses with smaller focal length can be used, resulting in a bigger illuminated field-of-view</td> <!--notes-->
+<td style="vertical-align: middle;">Possible improvement: decreasing the distance from excitation beam port to dichroic filter cube, such that also TIRF lenses with smaller focal length can be used, resulting in a bigger illuminated field-of-view</td> <!--notes-->
 </tr>
 <tr>
 <td>2</td> <!--id-->
@@ -97,7 +97,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td id="fancyboxtitle_3">Sample holder</td> <!--title-->
 <td><div class="discTitle">CNC milled - <a href="drawings/sampleholder.pdf">Technical drawing</a></div> Sample holder for standard coverslips (22x60mm, 26x76mm) with magnets to keep sample in place</td> <!--description-->
 <td><img src="images/sampleholder.png" class="fancybox" id=3></td></td> <!--image-->
-<td>Smaract piezo stage is tared with respect to sample holder weight by adding a constant force spring during stage assembly.</td> <!--notes-->
+<td style="vertical-align: middle;">Smaract piezo stage is tared with respect to sample holder weight by adding a constant force spring during stage assembly.</td> <!--notes-->
 </tr>
 <tr>
 <td>4</td> <!--id-->
@@ -212,7 +212,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <td id="fancyboxtitle_22">Collimator</td> <!--title-->
 <td><div class="discTitle">Thorlabs - Collimation lens <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-050-A">AC254-050-A</a> in <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1">CXY1</a> translating lens mount</div></td> <!--description-->
 <td><img src="images/cxy1.jpg" class="fancybox" id=23></td> <!--image-->
-<td>Collimates the input beam to a 1/e2 diameter of 6mm (for 488nm), the required input diameter for the piShaper. A shearing interferometer makes the collimation process easier. <br>See <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/9783527687732.app2"> Heintzmann, Practical Guide to Optical Alignment</a></td> <!--notes-->
+<td style="vertical-align: middle;">Collimates the input beam to a 1/e2 diameter of 6mm (for 488nm), the required input diameter for the piShaper. A shearing interferometer makes the collimation process easier. <br>See <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/9783527687732.app2"> Heintzmann, Practical Guide to Optical Alignment</a></td> <!--notes-->
 </tr>
 <tr>
 <td>3</td> <!--id-->
@@ -226,7 +226,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <td id="fancyboxtitle_24">piShaper</td> <!--title-->
 <td><div class="discTitle">AdlOptica - <a href="http://pishaper.com/shaper.html">piShaper 6_6_VIS</a></div>Transforms the gaussian illumination into a flat-top profile</td> <!--description-->
 <td><img src="images/pishaper.png" class="fancybox" id=24></td> <!--image-->
-<td><a href="https://www.nature.com/articles/s41467-019-09064-6">Stehr, Stein et al.</td> <!--notes-->
+<td style="vertical-align: middle;"><a href="https://www.nature.com/articles/s41467-019-09064-6">Stehr, Stein et al.</td> <!--notes-->
 </tr>
 <tr>
 <td>5</td> <!--id-->
@@ -281,9 +281,10 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 </tr>
 <td>1</td> <!--id-->
 <td id="fancyboxtitle_40">Tube lens</td> <!--title-->
-<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=TTL200-A">TTL200-A</a> tube lens in a <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY2">CXY2</a> mount.</div>200 mm focal length</td> <!--description-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=TTL200-A">TTL200-A</a> tube lens in a <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY2">CXY2</a> mount.</div>200 mm focal length. 
+Cage system is mounted via Thorlabs <a href="https://www.thorlabs.de/thorproduct.cfm?partnumber=AE4E6M">AE4E6M</a> thread adapter and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=LCP01/M">LCP01/M</a> cage plate.</td> <!--description-->
 <td><img src="images/tubelens.png" class="fancybox" id=40></td> <!--image-->
-<td></td> <!--notes-->
+<td><img src="images/tubelens_assembly.png" class="fancybox" id=40>Cage plate doubles as a mount for an alignment target.</td> <!--notes-->
 </tr>
 <tr>
 <td class="homemade">2</td> <!--id-->
@@ -291,7 +292,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <td><div class="discTitle">Custom made - <a href="drawings/aperture.pdf">Technical drawing</a> with <a href="https://www.newport.com/p/SM-25">Newport SM-25</a> as micrometer drives</div>The aperture is placed in the image plane and 
 restricts the image horizontally so up to three separate, spatially identical images can be displayed on a single camera.</td> <!--description-->
 <td><img src="images/aperture.png" style="bottom:10px;" class="fancybox" id=41></td> <!--image-->
-<td>Cropping the image in the horizontal dimension provides a bit more wiggle room in the emission image splitting optics, which would otherwise be prone to cause vignetting/shading of the image.</td> <!--notes-->
+<td style="vertical-align: middle;">Cropping the image in the horizontal dimension provides a bit more wiggle room in the emission image splitting optics, which would otherwise be prone to cause vignetting/shading of the image.</td> <!--notes-->
 </tr>
 <tr>
 <td class="homemade">3</td> <!--id-->
@@ -314,14 +315,14 @@ and three <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-300
 <td id="fancyboxtitle_43">Compact (dichroic) mirrors mounts</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KMSS/M">KMSS/M</a> and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KMS/M">KMS/M</a> kinematic mirror mounts </div></td> <!--description-->
 <td><img src="images/kmss.png" class="fancybox" id=43></td> <!--image-->
-<td>Mounting the dichroic mirror mounts onto a kinematic base <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB25/M">KB25/M</a> makes the alignment process easier and allows swapping dichroic mirrors. </td> <!--notes-->
+<td style="vertical-align: middle;">Mounting the dichroic mirror mounts onto a kinematic base <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB25/M">KB25/M</a> makes the alignment process easier and allows swapping dichroic mirrors. </td> <!--notes-->
 </tr>
 <tr>
 <td>6</td> <!--id-->
 <td id="fancyboxtitle_44">Image splitter (dichroic) mirrors</td> <!--title-->
 <td><div class="discTitle">Chroma - <a href="https://www.chroma.com/products/parts/zt561rdc">ZT561rdc</a> and <a href="https://www.chroma.com/products/parts/zt640rdc">ZT640rdc</a> in 26mm x 38mm and Thorlabs <a href="https://www.thorlabs.de/thorproduct.cfm?partnumber=BBSQ1-E02">BBSQ1-E02</a></div></td> <!--description-->
 <td><img src="images/emission_splitter.png" class="fancybox" id=44></td> <!--image-->
-<td>Mirrors are glued centrally onto the mounts, dichroic mirrors at the edge, using two-component silicone glue which stays flexible. This prevents the introduction of strain on the dichros.</td> <!--notes-->
+<td style="vertical-align: middle;">Mirrors are glued centrally onto the mounts, dichroic mirrors at the edge, using two-component silicone glue which stays flexible. This prevents the introduction of strain on the dichros.</td> <!--notes-->
 </tr>
 <tr>
 <td>7</td> <!--id-->
@@ -337,7 +338,7 @@ and <a href="https://www.semrock.com/filterdetails.aspx?id=ff01-680/42-25">Semro
 <td><div class="discTitle"><a href="https://www.photometrics.com/products/prime-family/primebsi">Teledyne Photometrics prime BSI sCMOS camera</a></div>2048-by-2048 pixels, 
 with <a href="https://www.aquatuning.nl/waterkoeling/sets-en-systemen/externe-sets/22164/alphacool-eiswand-360-solo-black?c=4788">Alphacool Eiswand</a> watercooling.</td> <!--description-->
 <td><img src="images/primebsi.png" class="fancybox" id=46></td> <!--image-->
-<td><a href="https://www.photometrics.com/applications/customer-stories/tirf-microscopy-bsi-ganzinger">Prime BSI customer story</a></td> <!--notes-->
+<td style="vertical-align: middle;"><a href="https://www.photometrics.com/applications/customer-stories/tirf-microscopy-bsi-ganzinger">Prime BSI customer story</a></td> <!--notes-->
 </tr>
 </table>
 
@@ -450,18 +451,21 @@ Alignment tips:<br>
 <th>Image</th>
 <th>Notes</th>
 </tr>
+<tr>
 <td>1</td> <!--id-->
 <td id="fancyboxtitle_71">Laser triggering</td> <!--title-->
 <td><div class="discTitle">Custom made laser trigger box </div>Documentation to follow</td> <!--description-->
 <td><img src="images/triggerbox.png" class="fancybox" id=71></td> <!--image-->
 <td></td> <!--notes-->
 </tr>
+<tr>
 <td>2</td> <!--id-->
 <td id="fancyboxtitle_71">Laser box</td> <!--title-->
 <td><div class="discTitle">Hübner Photonics - <a href="https://hubner-photonics.com/products/lasers/laser-combiners/c-flex/">C-FLEX with AOM for the 561nm DPSSL laser</a></div>405nm (140mW), 488nm (200mW), 561nm (220mW) and 638nm (195mW)</td> <!--description-->
 <td><img src="images/cflex.png" class="fancybox" id=71></td> <!--image-->
 <td></td> <!--notes-->
 </tr>
+<tr>
 <td>3</td> <!--id-->
 <td id="fancyboxtitle_72">Fixed frequency source</td> <!--title-->
 <td><div class="discTitle">AA Opto Electronic - <a href="http://www.aaoptoelectronic.com/our-products/rf-drivers-for-modulators-fixed-frequency-shifters/"> MODA110-B251k-304560</a> 
@@ -469,6 +473,7 @@ Alignment tips:<br>
 <td><img src="images/aaoptoelectronics.png" class="fancybox" id=72></td> <!--image-->
 <td></td> <!--notes-->
 </tr>
+<tr>
 <td>4</td> <!--id-->
 <td id="fancyboxtitle_73">Single mode fiber</td> <!--title-->
 <td><div class="discTitle">Qioptiq - <a href="https://www.excelitas.com/product/kineflex-fiber-delivery-system">kineFLEX-HPV-P-3-S-405..640-0.7-0.7-P0</a> 
@@ -478,6 +483,36 @@ Alignment tips:<br>
 </tr>
 </table>
 
+
+<h2>Accessories</h2>
+<table class="component_list">
+<tr>
+<th>id</th>
+<th>Title</th>
+<th>Description</th>
+<th>Image</th>
+<th>Notes</th>
+</tr>
+<tr class="homemade">
+<td>1</td> <!--id-->
+<td id="fancyboxtitle_80">Gustafsson alignment tool</td> <!--title-->
+<td><div class="discTitle">CNC-milled <a href="drawings/alignment_tool.pdf">Technical drawing</a></div> See <a href="https://www.osapublishing.org/oe/fulltext.cfm?uri=oe-23-6-7734&id=313825">Abrahamsson et al.</a></td> <!--description-->
+<td><img src="images/gustafsson.png" class="fancybox" id=80></td> <!--image-->
+<td></td> <!--notes-->
+</tr>
+<td>2</td> <!--id-->
+<td id="fancyboxtitle_81">Two-component glue frequency source</td> <!--title-->
+<td><div class="discTitle">Picodent - <a href="https://www.picodent.de/artikel/831-picodent_twinsil.html"> Twinsil</a></div> Easily removable flexible silicone glue </td> <!--description-->
+<td><img src="images/picodent.png" class="fancybox" id=81></td> <!--image-->
+<td></td> <!--notes-->
+</tr>
+<td>3</td> <!--id-->
+<td id="fancyboxtitle_82">Shear plate</td> <!--title-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=SI100">SI100</a></div>For beam diameters of 5-10 mm. Great tool for collimating fiber output, as well as aligning the emission pathway in combination with the Gustafsson alignment tool. </td> <!--description-->
+<td><img src="images/shear_plate.png" class="fancybox" id=82></td> <!--image-->
+<td></td> <!--notes-->
+</tr>
+</table>
 
 
 
