--- a/K2TIRF/index.html
+++ b/K2TIRF/index.html
@@ -53,17 +53,16 @@ The real text begins here.
 <section>
 <h1>Ganzinger Lab - K2 TIRF microscope</h1>
 <div style="max-width:85%;">
-<p>Commercially available fluorescence microscopes that are compatible with single-molecule experiments are often very expensive and lack flexibility. <br>
+Commercially available fluorescence microscopes that are compatible with single-molecule experiments are often very expensive and lack flexibility. <br>
 In recent years, a number of open-source projects emerged within the (single-molecule) fluorescence microscopy community, facilitating the planning and setting up of a custom microscope. <br>
 These projects can be combined with each other or with commercial solutions, depending on the experimental requirements, the infrastructure around the lab (workshops, instrument developers), the available budget and workforce.<br>
 <br>
 In our multicolor single-molecule TIRF microscope 'K2' we opt for commercial solutions for parts which don't need the maximum flexibility, and are much cheaper or much faster obtained than a comparable custom-made solution. <br>
 Whenever available, we base our custom-made solutions on existing open-source projects to save time and costs in the instrument development process.<br>
 </div>
-</p>
 <br>
 <div class="container">
-	<a href="images/K2_setup_left.png"><img src="./images/K2_setup_left.jpg" width=41.4% /></a> &nbsp
+	<a href="images/K2_setup_left.jpg"><img src="./images/K2_setup_left.jpg" width=41.4% /></a> &nbsp
 	<a href="images/K2_setup_right.jpg"><img class="middle-img" src="./images/K2_setup_right.jpg" width=40% /></a>
 </div>
 <br>
