--- a/K2TIRF/about.html
+++ b/K2TIRF/about.html
@@ -57,26 +57,121 @@ The real text begins here.
  -->
 <section>
 <h1>About the project</h1>
+
+
+<div class="slideshow-container">
+
+<div class="mySlides fade">
+  <img src="images/slideshow/labsnacks.jpg" style="width:100%">
+  <div class="text">Snack supply</div>
+</div>
+
+<div class="mySlides fade">
+  <img src="images/slideshow/fullsetup.jpg" style="width:100%">
+  <div class="text">Full setup</div>
+</div>
+
+
+<div class="mySlides fade">
+  <img src="images/slideshow/software.jpg" style="width:100%">
+  <div class="text">K2 software</div>
+</div>
+
+
+<div class="mySlides fade">
+  <img src="images/slideshow/emissionpath.jpg" style="width:100%">
+  <div class="text">Emission path alignment</div>
+</div>
+
+<div class="mySlides fade">
+  <img src="images/slideshow/trigger.jpg" style="width:100%">
+  <div class="text">Laser trigger testing</div>
+</div>
+
+<div class="mySlides fade">
+  <img src="images/slideshow/epi.jpg" style="width:100%">
+  <div class="text">Excitation path alignment</div>
+</div>
+
+
+
+<div class="mySlides fade">
+  <img src="images/slideshow/excitationport.jpg" style="width:100%">
+  <div class="text">Excitation pathway alignment</div>
+</div>
+
+<div class="mySlides fade">
+  <img src="images/slideshow/triggerbox.jpg" style="width:100%">
+  <div class="text">Laser trigger box</div>
+</div>
+
+<div class="mySlides fade">
+  <img src="images/slideshow/aperture.jpg" style="width:100%">
+  <div class="text">Adjustable aperture</div>
+</div>
+
+<div class="mySlides fade">
+  <img src="images/slideshow/qgfocuslock.jpg" style="width:100%">
+  <div class="text">qgFocus box</div>
+</div>
+
+<div class="mySlides fade">
+  <img src="images/slideshow/frap.jpg" style="width:100%">
+  <div class="text">FRAP flip-lens</div>
+</div>
+
+<div class="mySlides fade">
+  <img src="images/slideshow/shear.jpg" style="width:100%">
+  <div class="text">Collimating the beam on the shear interferometer</div>
+</div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+  <span class="dot" onclick="currentSlide(4)"></span> 
+  <span class="dot" onclick="currentSlide(5)"></span> 
+  <span class="dot" onclick="currentSlide(6)"></span> 
+  <span class="dot" onclick="currentSlide(7)"></span> 
+  <span class="dot" onclick="currentSlide(8)"></span> 
+  <span class="dot" onclick="currentSlide(9)"></span> 
+  <span class="dot" onclick="currentSlide(10)"></span> 
+  <span class="dot" onclick="currentSlide(11)"></span> 
+  <span class="dot" onclick="currentSlide(12)"></span> 
+</div>
+
 <div style="max-width:80%;">The microscope was designed specifically to become the main tool for all surface-based fluorescence imaging in the group <a href="https://amolf.nl/research-groups/physics-of-cellular-interactions">Physics of Cellular Interactions</a> 
 of <a href="https://amolf.nl/people/kristina-ganzinger">Dr. Ganzinger</a> at AMOLF.<br>
-Developing and setting up the microscope was strongly supported by AMOLF's in-house engineering teams and the precision manufacturing workshop:</div>
-<h2>People involved at AMOLF</h2>
-<ul>
-<li>Marco Seynen (Laser trigger box, qgFocus)</li>
-<li>Marko Kamp (Optics)</li>
-<li>Jan Zomerdijk (Laser trigger box, qgFocus)
-<li>Hinco Schoenmaker (Setup infrastructure)</li>
-<li>Henk-Jan Boluijt (CAD design)</li>
-<li>Marnix Verweij (CAD design)</li>
-<li>Bob Krijger (Temperature control)</li>
-</ul>
+Developing and setting up the microscope was strongly supported by AMOLF's in-house engineering teams and the <a href="https://amolf.nl/infrastructure-group/precision-manufacturing">precision manufacturing workshop</a>.</div>
 
-<h2>External people involved</h2>
-<ul>
-<li>Johannes Hohlbein</li>
-<li>Philipp Blumhardt</li>
-</ul>
 
+
+<div id="container">
+
+<table width="80%" border="0" cellpadding="0" cellspacing="0">
+<tr>
+<td><h2>People involved at AMOLF</h2></td><td><h2>External people involved</h2></td>
+</tr>
+<tr><td><a href="https://amolf.nl/people/marco-seynen">Marco Seynen</a> (Laser trigger box, qgFocus)</td><td><a href="https://jhohlbein.com/">Johannes Hohlbein</a></td></tr>
+<tr><td><a href="https://amolf.nl/people/marko-kamp">Marko Kamp (Optics)</a></td><td>Philipp Blumhardt</td></tr>
+<tr><td><a href="https://amolf.nl/people/hinco-schoenmaker">Hinco Schoenmaker</a> (Setup infrastructure)</td></tr>
+<tr><td><a href="https://amolf.nl/people/jan-zomerdijk">Jan Zomerdijk</a> (Laser trigger box, qgFocus)</td></tr>
+<tr><td><a href="https://amolf.nl/people/henk-jan-boluijt">Henk-Jan Boluijt</a> (CAD design)</td></tr>
+<tr><td>Marnix Verweij (CAD design)</td></tr>
+<tr><td><a href="https://amolf.nl/people/bob-krijger">Bob Krijger</a> (Temperature control)</td></tr>
+<tr><td><a href="https://amolf.nl/people/dico-kruining">Dico Kruining</a> (Head of Electronics Engineering)</td></tr>
+<tr><td><a href="https://amolf.nl/people/marco-konijnenburg">Marco Konijnenburg</a> (Head of Software Engineering)</td></tr>
+</table>
+
+</div>
+
+<script type="text/javascript" src=".\javascript\slideshow.js"></script>
 <script type="text/javascript" src=".\javascript\fancybox\jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src=".\javascript\fancybox\jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src=".\javascript\fancybox\jquery.fancybox-1.3.4.js"></script>
