--- a/K2TIRF/about.html
+++ b/K2TIRF/about.html
@@ -62,7 +62,7 @@ The real text begins here.
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <img src="images/slideshow/labsnacks.jpg" style="width:100%">
+  <img src="images/slideshow/labsnacks.JPG" style="width:100%">
   <div class="text">Snack supply</div>
 </div>
 
