--- a/K2TIRF/about.html
+++ b/K2TIRF/about.html
@@ -147,9 +147,9 @@ The real text begins here.
   <span class="dot" onclick="currentSlide(12)"></span> 
 </div>
 
-<div style="max-width:80%;">The microscope was designed specifically to become the main tool for all surface-based fluorescence imaging in the group <a href="https://amolf.nl/research-groups/physics-of-cellular-interactions">Physics of Cellular Interactions</a> 
-of <a href="https://amolf.nl/people/kristina-ganzinger">Dr. Ganzinger</a> at AMOLF.<br>
-Developing and setting up the microscope was strongly supported by AMOLF's in-house engineering teams and the <a href="https://amolf.nl/infrastructure-group/precision-manufacturing">precision manufacturing workshop</a>.</div>
+<div style="max-width:80%;">The microscope was designed and set-up during the PhD work of <a href="https://amolf.nl/people/christian-niederauer"> Christian Niederauer</a> in the group <a href="https://amolf.nl/research-groups/physics-of-cellular-interactions">Physics of Cellular Interactions</a> of  <a href="https://amolf.nl/people/kristina-ganzinger">Dr. Kristina Ganzinger</a> at AMOLF. 
+It was designed specifically as the main tool for all surface-based fluorescence imaging in the group  
+of at AMOLF. Developing and setting up the microscope was strongly supported by AMOLF's in-house engineering teams and the <a href="https://amolf.nl/infrastructure-group/precision-manufacturing">precision manufacturing workshop</a>:</div>
 
 
 
@@ -159,18 +159,19 @@ Developing and setting up the microscope was strongly supported by AMOLF's in-ho
 <tr>
 <td><h2>People involved at AMOLF</h2></td><td><h2>External people involved</h2></td>
 </tr>
-<tr><td><a href="https://amolf.nl/people/marco-seynen">Marco Seynen</a> (Laser trigger box, qgFocus)</td><td><a href="https://jhohlbein.com/">Johannes Hohlbein</a></td></tr>
-<tr><td><a href="https://amolf.nl/people/marko-kamp">Marko Kamp (Optics)</a></td><td>Philipp Blumhardt</td></tr>
-<tr><td><a href="https://amolf.nl/people/hinco-schoenmaker">Hinco Schoenmaker</a> (Setup infrastructure)</td></tr>
-<tr><td><a href="https://amolf.nl/people/jan-zomerdijk">Jan Zomerdijk</a> (Laser trigger box, qgFocus)</td></tr>
-<tr><td><a href="https://amolf.nl/people/henk-jan-boluijt">Henk-Jan Boluijt</a> (CAD design)</td></tr>
-<tr><td>Marnix Verweij (CAD design)</td></tr>
-<tr><td><a href="https://amolf.nl/people/bob-krijger">Bob Krijger</a> (Temperature control)</td></tr>
-<tr><td><a href="https://amolf.nl/people/dico-kruining">Dico Kruining</a> (Head of Electronics Engineering)</td></tr>
-<tr><td><a href="https://amolf.nl/people/marco-konijnenburg">Marco Konijnenburg</a> (Head of Software Engineering)</td></tr>
+<tr><td><a href="https://amolf.nl/people/marco-seynen">Marco Seynen</a></td><td><a href="https://jhohlbein.com/">Johannes Hohlbein</a></td></tr>
+<tr><td><a href="https://amolf.nl/people/marko-kamp">Marko Kamp</a></td><td>Philipp Blumhardt</td></tr>
+<tr><td><a href="https://amolf.nl/people/hinco-schoenmaker">Hinco Schoenmaker</a> </td></tr>
+<tr><td><a href="https://amolf.nl/people/jan-zomerdijk">Jan Zomerdijk</a></td></tr>
+<tr><td><a href="https://amolf.nl/people/henk-jan-boluijt">Henk-Jan Boluijt</a> </td></tr>
+<tr><td>Marnix Verweij</td></tr>
+<tr><td><a href="https://amolf.nl/people/bob-krijger">Bob Krijger</a></td></tr>
+<tr><td><a href="https://amolf.nl/people/dico-kruining">Dico Kruining</a></td></tr>
+<tr><td><a href="https://amolf.nl/people/marco-konijnenburg">Marco Konijnenburg</a></td></tr>
 </table>
 
 </div>
+
 
 <script type="text/javascript" src=".\javascript\slideshow.js"></script>
 <script type="text/javascript" src=".\javascript\fancybox\jquery-1.11.0.min.js"></script>
