added gustafsson picture

--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -498,7 +498,7 @@ Alignment tips:<br>
 <td id="fancyboxtitle_80">Gustafsson alignment tool</td> <!--title-->
 <td><div class="discTitle">CNC-milled <a href="drawings/alignment_tool.pdf">Technical drawing</a></div> See <a href="https://www.osapublishing.org/oe/fulltext.cfm?uri=oe-23-6-7734&id=313825">Abrahamsson et al.</a></td> <!--description-->
 <td><img src="images/gustafsson.png" class="fancybox" id=80></td> <!--image-->
-<td></td> <!--notes-->
+<td style="vertical-align: middle;">Screws into objective thread and helps aligning the emission path by providing a strong collimated light source.  </td> <!--notes-->
 </tr>
 <td>2</td> <!--id-->
 <td id="fancyboxtitle_81">Two-component glue frequency source</td> <!--title-->
@@ -508,9 +508,9 @@ Alignment tips:<br>
 </tr>
 <td>3</td> <!--id-->
 <td id="fancyboxtitle_82">Shear plate</td> <!--title-->
-<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=SI100">SI100</a></div>For beam diameters of 5-10 mm. Great tool for collimating fiber output, as well as aligning the emission pathway in combination with the Gustafsson alignment tool. </td> <!--description-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=SI100">SI100</a></div>For beam diameters of 5-10 mm </td> <!--description-->
 <td><img src="images/shear_plate.png" class="fancybox" id=82></td> <!--image-->
-<td></td> <!--notes-->
+<td style="vertical-align: middle;">Great tool for collimating fiber output, as well as aligning the emission pathway in combination with the Gustafsson alignment tool.</td> <!--notes-->
 </tr>
 </table>
 
