--- a/K2TIRF/about.html
+++ b/K2TIRF/about.html
@@ -147,7 +147,7 @@ The real text begins here.
   <span class="dot" onclick="currentSlide(12)"></span> 
 </div>
 
-<div style="max-width:80%;">The microscope was designed and set up during the PhD work of <a href="https://amolf.nl/people/christian-niederauer"> Christian Niederauer</a>, supervised by <a href="https://amolf.nl/people/kristina-ganzinger">Dr. Kristina Ganzinger</a> at AMOLF. 
+<div style="max-width:80%;">The microscope was designed and set up during the PhD project of <a href="https://amolf.nl/people/christian-niederauer"> Christian Niederauer</a>, supervised by <a href="https://amolf.nl/people/kristina-ganzinger">Dr. Kristina Ganzinger</a> at AMOLF. 
 It was designed specifically to be the main tool for all surface-based fluorescence imaging in the group <a href="https://amolf.nl/research-groups/physics-of-cellular-interactions">Physics of Cellular Interactions</a>. Developing and setting up the microscope was strongly supported by AMOLF's in-house engineering teams and the <a href="https://amolf.nl/infrastructure-group/precision-manufacturing">precision manufacturing workshop</a>:</div>
 
 
